...
    Function noConnectivityCallback,
  ) async {
    helper.startLoading(refreshCallback);
    try {
      bool exists = await _database.exists(folder, record);
      if (exists) {
        showMessage('ERROR', errorString, 'Awww...', Colors.red);
      } else {
        await _database.set(
          folder,
          record,
          data,
        );
...
